--- a/package.json
+++ b/package.json
@@ -4,5 +4,21 @@
   "version": "1.0.0",
   "repository": "git@github.com:saltyshiomix/nextjs-todo-app.git",
   "author": "Shiono Yoshihide <shiono.yoshihide@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "^9.1.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
+  },
+  "devDependencies": {
+    "@types/node": "^12.7.12",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "typescript": "^3.6.4"
+  }
 }
