--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "private": true,
-  "name": "nextjs-todo-app",
+  "name": "stripe-store",
   "version": "1.0.0",
-  "repository": "git@github.com:saltyshiomix/nextjs-todo-app.git",
-  "author": "Shiono Yoshihide <shiono.yoshihide@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "next",
