--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "start": "cross-env NODE_ENV=production next start"
   },
   "dependencies": {
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
+    "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "next": "^9.1.4",
     "next-redux-wrapper": "^4.0.1",
+    "pg": "^8.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -19,15 +24,26 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reflect-metadata": "^0.1.13",
+    "reselect": "^4.0.0",
+    "swr": "^0.1.16",
+    "stripe": "^8.169.0",
+    "toml": "^3.0.0",
+    "typeorm": "^0.2.31",
+    "use-shopping-cart": "2.1.0"
   },
   "devDependencies": {
+    "@stripe/react-stripe-js": "1.1.2",
+    "@stripe/stripe-js": "^1.17.0",
+    "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^12.12.12",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/recompose": "^0.30.7",
     "@types/redux-logger": "^3.0.7",
+    "@types/typescript": "^2.0.0",
     "cross-env": "^6.0.3",
     "typescript": "^3.7.2"
   }
