--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "start": "cross-env NODE_ENV=production next start"
   },
   "dependencies": {
+    "@bytemd/plugin-gfm": "^1.4.0",
+    "@bytemd/react": "^1.4.0",
+    "concurrently": "^6.0.0",
+    "github-markdown-css": "^4.0.0",
+    "gray-matter": "^4.0.2",
+    "marked": "^2.0.0",
+    "md5": "^2.3.0",
+    "next-images": "^1.7.0",
+    "next-iron-session": "^4.1.11",
+    "typescript": "^4.1.5",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "axios": "^0.21.1",
@@ -33,6 +43,11 @@
     "use-shopping-cart": "2.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/preset-env": "^7.13.8",
+    "@babel/preset-react": "^7.12.13",
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "^1.17.0",
     "@types/axios": "^0.14.0",
