--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "@bytemd/plugin-gfm": "^1.4.0",
     "@bytemd/react": "^1.4.0",
+    "axios": "^0.21.1",
     "concurrently": "^6.0.0",
     "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.2",
+    "lodash": "^4.17.21",
     "marked": "^2.0.0",
     "md5": "^2.3.0",
-    "next-images": "^1.7.0",
-    "next-iron-session": "^4.1.11",
-    "typescript": "^4.1.5",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
-    "axios": "^0.21.1",
-    "lodash": "^4.17.21",
+    "mysql": "^2.18.1",
     "next": "^9.1.4",
+    "next-images": "^1.7.0",
+    "next-iron-session": "^4.1.11",
     "next-redux-wrapper": "^4.0.1",
     "pg": "^8.5.1",
     "react": "^16.12.0",
@@ -36,10 +36,11 @@
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "reselect": "^4.0.0",
-    "swr": "^0.1.16",
     "stripe": "^8.169.0",
+    "swr": "^0.1.16",
     "toml": "^3.0.0",
     "typeorm": "^0.2.31",
+    "typescript": "^4.1.5",
     "use-shopping-cart": "2.1.0"
   },
   "devDependencies": {
